# chassis_cybergear_ros2

./: README.md  README_CN.md
src/chassis_control_m5/: CMakeLists.txt  package.xml
src/chassis_control_m5/config/: chassis_driver_config.yaml
src/chassis_control_m5/include/chassis_control_m5/: battery_manager.hpp  chassis_control.hpp  odom.hpp
src/chassis_control_m5/include/chassis_control_m5/motor/: cybergear_bridge.hh  cybergear_can_interface_ros2.hh  cybergear_controller.hh  cybergear_driver.hh  cybergear_driver_utils.hh
src/chassis_control_m5/launch/: chassis_control.launch.py
src/chassis_control_m5/src/: chassis_control.cpp  main.cpp
src/chassis_control_m5/src/motor/: cybergear_bridge.cpp  cybergear_bridge_packet.cpp  cybergear_can_interface_ros2.cpp  cybergear_controller.cpp  cybergear_driver.cpp
src/ros2socketcan_bridge/: CMakeLists.txt  package.xml
src/ros2socketcan_bridge/src/: ros2socketcan.cpp  ros2socketcan.h
